manifest/objects/copado__Quality_Gate_Action__mdt.object
<CustomObject>
    <fields>
        <fullName>copado__Action__c</fullName>
        <label>Action</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Details__c</fullName>
        <label>Details</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Environment_Info_Message__c</fullName>
        <label>Environment Info Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Execution_Error_Message__c</fullName>
        <label>Execution Error Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Execution_Sequence_Icon__c</fullName>
        <label>Execution Sequence Icon</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Info_Message__c</fullName>
        <label>Info Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Is_Default__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Default</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>copado__Select_Environment_Message__c</fullName>
        <label>Select Environment Message</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Sequence__c</fullName>
        <label>Sequence</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>copado__Test_Tool__c</fullName>
        <label>Test Tool</label>
        <referenceTo>copado__TestTool__mdt</referenceTo>
        <relationshipLabel>Quality Gate Actions</relationshipLabel>
        <relationshipName>Quality_Gate_Actions</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>copado__Tool_Sequence_Status__c</fullName>
        <label>Tool Sequence Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Quality Gate Action</label>
    <pluralLabel>Quality Gate Actions</pluralLabel>
</CustomObject>